feat: added header and footer for the website

--- a/index.html
+++ b/index.html
@@ -6,13 +6,127 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/default.css">
     <title>Buffalo Converter</title>
 </head>
 
 <body>
-    <h1>Welcome to Buffalo Converter</h1>
-    <p>Let's chunk up some files</p>
+    <header>
+        <nav>
+            <div id="logo-container">
+                <div class="logo-div">
+                    <img src="assets/img/logo.png" alt="logo">
+                    <span><strong>Buffalo</strong> Splitter</span>
+                </div>
+            </div>
+
+            <div class="mobile-nav">
+                <ul>
+                    <li>
+                        <a href="#">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#">Format</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Help</a>
+                    </li>
+                </ul>
+
+                <div>
+                    <button type="button">
+                        Log In
+                    </button>
+
+                    <button type="button">
+                        Sign Up
+                    </button>
+                </div>
+            </div>
+        </nav>
+
+        <button class="hamburger">
+            <div class="menu-bar"></div>
+        </button>
+    </header>
+
+    <main>
+
+    </main>
+
+    <!-- This is the "Footer" of the site, it is the same across all 4 pages -->
+    <footer>
+        <section class="quick-links">
+            <h3>Company</h3>
+
+            <!-- Quick-Links sections -->
+
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Security</a></li>
+                </ul>
+            </nav>
+        </section>
+
+
+        <section class="quick-links">
+            <h3>Developer</h3>
+
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">Core API</a></li>
+                    <li><a href="#">Reference Zapier</a></li>
+                    <li><a href="#">Webhooks</a></li>
+                </ul>
+            </nav>
+        </section>
+
+        <section class="quick-links">
+            <h3>Details</h3>
+
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Sponsorship</a></li>
+                    <li><a href="#">Sponsors</a></li>
+                </ul>
+            </nav>
+        </section>
+
+
+        <!-- Contact details section -->
+        <section class="contact-us">
+            <h3>Contact Us</h3>
+
+            <span>
+                <i class="fa-solid fa-location-dot"></i>
+                Buffalo
+            </span>
+            <span>
+                <i class="fa-solid fa-phone"></i>
+                Buffalo
+            </span>
+            <span>
+                <i class="fa-solid fa-envelope"></i>
+                +2348066655577
+            </span>
+
+        </section>
+
+        <div class="copyright">
+            <p>&copy; 2022 Compassionate Hearts of Kansas City</p>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="js/main.js"></script>
 </body>
