--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                     </li>
                 </ul>
 
-                <div>
-                    <button type="button">
+                <div class="header-btn">
+                    <a class="btn-login">
                         Log In
-                    </button>
+                    </a>
 
-                    <button type="button">
+                    <a href="pages/signup.html" class="btn-signup">
                         Sign Up
-                    </button>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -104,7 +104,8 @@
         </section>
 
 
-        <!-- Contact details section -->
+        <!-- Contact Us section -->
+
         <section class="contact-us">
             <h3>Contact Us</h3>
 
