feat: added the sign-in page and styled it accordingly

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -82,9 +82,11 @@
                 <div class="form-control">
                     <label>Password</label>
                     <input id="password" type="password" name="password" placeholder=".............">
+                    <small>Forgot Password?</small>
                 </div>
 
                 <button id="btn__submit" type="button">Continue</button>
+                <small>Already have an account? <a href="signin.html">Log In</a></small>
             </form>
         </div>
 
