--- a/pages/downloadpage.html
+++ b/pages/downloadpage.html
@@ -70,19 +70,19 @@
                 <button> 
                     <i class="fa-solid fa-cloud-arrow-down download-icon"></i>
                     <h4 id="download-icon"> <a href="" target="_blank"> Download</a></h4>
-                    <select id="download-icon"> 
+                    <!-- <select id="download-icon"> 
                         <option value="0"></option>
                         <option value="2">HTML</option>
                         <option value="3">MDB</option>
                         <option value="4">ODS</option>
-                    </select>
+                    </select> -->
                 </button>
             </div>
         </div>
       </section>
 
       <section id="lower-container">
-        <div id="container1">
+        <div id="containerimg">
             <img src="../assets/img/slider-scheme-2-removebg-preview 1.png" alt="illustration" width="40%" height="40%">
         </div>
         <div id="container2" class="split-options">
