--- a/pages/downloadpage.html
+++ b/pages/downloadpage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/downloadpage.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <title>Download page</title>
 </head>
 <body>
@@ -61,8 +62,10 @@
         </div>
 
         <div id="container2">
+            <div id="boxed-container">
             <div id="boxed-container2">
                 <h3>Your file is <br/> ready</h3>
+            </div>
             </div>
             <div id="boxed-container1">
                 <h4>click button below to download</h4> 
