feat: signup, signin works and dashboard page as well

--- a/pages/signin.html
+++ b/pages/signin.html
@@ -75,7 +75,7 @@
                     <input id="password" type="password" name="password" placeholder=".............">
                 </div>
 
-                <button id="btn__submit" type="button">Continue</button>
+                <button id="btn__submit" class="btn_signin" type="button">Continue</button>
                 <small>Don't have an account yet? <a href="signup.html">Sign up</a></small>
             </form>
         </div>
@@ -166,6 +166,8 @@
             <p>&copy; 2022 Buffalo Converter</p>
         </div>
     </footer>
+
+    <script type="module" src="../js/signin.js"></script>
 
     <script type="text/javascript" src="../js/main.js"></script>
 </body>
