--- a/pages/signup.html
+++ b/pages/signup.html
@@ -85,7 +85,7 @@
                     <small>Forgot Password?</small>
                 </div>
 
-                <button id="btn__submit" type="button">Continue</button>
+                <button id="btn__submit" class="btn_signup" type="button">Continue</button>
                 <small>Already have an account? <a href="signin.html">Log In</a></small>
             </form>
         </div>
@@ -176,6 +176,9 @@
             <p>&copy; 2022 Buffalo Converter</p>
         </div>
     </footer>
+
+
+    <script type="module" src="../js/signup.js"></script>
 
     <script type="text/javascript" src="../js/main.js"></script>
 </body>
