fix: reviewed href to login page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
 
                 <div class="header-btn">
-                    <a class="btn-login">
+                    <a href="pages/signin.html" class="btn-login">
                         Log In
                     </a>
 
