fix: corrected the homepage.html and index.html issues done by a developer collaborator

--- a/index.html
+++ b/index.html
@@ -2,134 +2,239 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/default.css">
-    <title>Buffalo Converter</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div id="logo-container">
-                <div class="logo-div">
-                    <img src="assets/img/logo.png" alt="logo">
-                    <span><strong>Buffalo</strong> Splitter</span>
-                </div>
-            </div>
-
-            <div class="mobile-nav">
-                <ul>
-                    <li>
-                        <a href="#">Pricing</a>
-                    </li>
-                    <li>
-                        <a href="#">Format</a>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Help</a>
-                    </li>
-                </ul>
-
-                <div class="header-btn">
-                    <a href="pages/signin.html" class="btn-login">
-                        Log In
-                    </a>
-
-                    <a href="pages/signup.html" class="btn-signup">
-                        Sign Up
-                    </a>
-                </div>
-            </div>
-        </nav>
-
-        <button class="hamburger">
-            <div class="menu-bar"></div>
-        </button>
-    </header>
-
-    <main>
-
-    </main>
-
-    <!-- This is the "Footer" of the site, it is the same across all 4 pages -->
-    <footer>
-        <section class="quick-links">
-            <h3>Company</h3>
-
-            <!-- Quick-Links sections -->
-
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Security</a></li>
-                </ul>
-            </nav>
-        </section>
-
-
-        <section class="quick-links">
-            <h3>Developer</h3>
-
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="#">Documentation</a></li>
-                    <li><a href="#">Core API</a></li>
-                    <li><a href="#">Reference Zapier</a></li>
-                    <li><a href="#">Webhooks</a></li>
-                </ul>
-            </nav>
-        </section>
-
-        <section class="quick-links">
-            <h3>Details</h3>
-
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Sponsorship</a></li>
-                    <li><a href="#">Sponsors</a></li>
-                </ul>
-            </nav>
-        </section>
-
-
-        <!-- Contact Us section -->
-
-        <section class="contact-us">
-            <h3>Contact Us</h3>
-
-            <span>
-                <i class="fa-solid fa-location-dot"></i>
-                Buffalo
-            </span>
-            <span>
-                <i class="fa-solid fa-phone"></i>
-                Buffalo
-            </span>
-            <span>
-                <i class="fa-solid fa-envelope"></i>
-                +2348066655577
-            </span>
-
-        </section>
-
-        <div class="copyright">
-            <p>&copy; 2022 Buffalo Converter</p>
+  <header>
+    <nav>
+      <div id="logo-container">
+        <div class="logo-div">
+          <img src="assets/img/logo.png" alt="logo">
+          <span><strong>Buffalo</strong> Splitter</span>
         </div>
-    </footer>
+      </div>
 
-    <script type="text/javascript" src="js/main.js"></script>
+      <div class="mobile-nav">
+        <ul>
+          <li>
+            <a href="#">Pricing</a>
+          </li>
+          <li>
+            <a href="#">Format</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Help</a>
+          </li>
+        </ul>
+
+        <div class="header-btn">
+          <a href="pages/signin.html" class="btn-login">
+            Log In
+          </a>
+
+          <a href="pages/signup.html" class="btn-signup">
+            Sign Up
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <button class="hamburger">
+      <div class="menu-bar"></div>
+    </button>
+  </header>
+
+  <div class="container">
+
+    <section class="rectangle">
+      <!-- <img class="" src="images/Rectangle 123.jpg" alt=""> -->
+      <!-- <div class="rectangle"></div> -->
+      <h1>The easiest way to split your CSV & JSON</h1>
+    </section>
+
+
+    <div class="content">
+      <section class="first">
+        <h2>How it works</h2>
+
+        <div class="how-box">
+          <div class="how">
+            <h3 class="box-head">Choose file <img src="/images/Frame 73.jpg" alt="" /></h3>
+            <p>
+              Register and have access to drag and drop a CSV or JSON file
+              into the file selection area above, or click to choose a file
+              from your local computer.
+            </p>
+          </div>
+
+          <img class="arrow" src="/images/Arrow 1.jpg" alt="" />
+
+          <div class="how">
+            <h3 class="box-head">Split to <img src="/images/Frame 73.jpg" alt="" /></h3>
+            <p>choose a preferable different file format</p>
+          </div>
+          <img class="arrow" src="/images/Arrow 1.jpg" alt="" />
+
+          <div class="how">
+            <h3 class="box-head">Split now</h3>
+            <p>Download or save your file</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="second">
+        <div class="csv-json">
+          <div class="csv">
+            <img src="/images/csv-file-format 1.png" alt="" />
+          </div>
+          <p class="para2">
+            CSV, sometimes known as a comma separated values file is commonly
+            used by spreadsheet applications. It allows plain text data to be
+            saved in tabular format.If a user has a large volume of data and
+            needs to transfer it between applications then a CSV file is often
+            used.
+          </p>
+        </div>
+        <div class="csv-json">
+          <div class="json">
+            <img src="/images/json.jpg" alt="" />
+          </div>
+          <p class="para2">
+            JSON is an open standard file format and data interchange format
+            that uses human-readable text to store and transmit data objects
+            consisting of attribute-value pairs and arrays. It is a common
+            data format with diverse uses in electronic data interchange,
+            including that of web applications with servers.
+          </p>
+        </div>
+      </section>
+
+      <section class="third">
+        <div class="features">
+          <img class="feat-img" src="/images/privacy 1.jpg" alt="" />
+          <h3>PRIVACY</h3>
+          <p>
+            We recognise that you have entrusted Buffalo with your files and
+            your personal information, and handling your data is a serious
+            responsibility; we want you to know how we go about doing that.
+          </p>
+        </div>
+        <div class="features">
+          <img class="feat-img" src="/images/quick 1.jpg" alt="" />
+          <h3>QUICK</h3>
+          <p>
+            The addition of real-time conversions to the site means that you
+            get your files splited that much more quickly.
+          </p>
+        </div>
+        <div class="features">
+          <img class="feat-img" src="/images/help-is-on-hand 1.jpg" alt="" />
+          <h3>HELP IS ON HAND</h3>
+          <p>
+            We have a dedicated page in case you ever need any help, and if
+            the answer isn't on that page, then drop our support team an email
+            and they'll be happy to help.
+          </p>
+        </div>
+        <div class="features">
+          <img class="feat-img" src="/images/ease-of-use 1.jpg" alt="" />
+          <h3>EASE OF USE</h3>
+          <p>
+            You can split a file for free in just a few clicks, without any
+            need to register for an account.
+          </p>
+        </div>
+      </section>
+
+      <section class="last">
+        <h1>You're in good company:</h1>
+        <h1> Buffalo will Split your CSV & JSON with ease</h1>
+      </section>
+    </div>
+  </div>
+
+  <!-- This is the "Footer" of the site, it is the same across all 4 pages -->
+  <footer>
+    <section class="quick-links">
+      <h3>Company</h3>
+
+      <!-- Quick-Links sections -->
+
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Security</a></li>
+        </ul>
+      </nav>
+    </section>
+
+
+    <section class="quick-links">
+      <h3>Developer</h3>
+
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="#">Documentation</a></li>
+          <li><a href="#">Core API</a></li>
+          <li><a href="#">Reference Zapier</a></li>
+          <li><a href="#">Webhooks</a></li>
+        </ul>
+      </nav>
+    </section>
+
+    <section class="quick-links">
+      <h3>Details</h3>
+
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Sponsorship</a></li>
+          <li><a href="#">Sponsors</a></li>
+        </ul>
+      </nav>
+    </section>
+
+
+    <!-- Contact Us section -->
+
+    <section class="contact-us">
+      <h3>Contact Us</h3>
+
+      <span>
+        <i class="fa-solid fa-location-dot"></i>
+        Buffalo
+      </span>
+      <span>
+        <i class="fa-solid fa-phone"></i>
+        Buffalo
+      </span>
+      <span>
+        <i class="fa-solid fa-envelope"></i>
+        +2348066655577
+      </span>
+
+    </section>
+
+    <div class="copyright">
+      <p>&copy; 2022 Buffalo Converter</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
