style: improved styling for the sign-up and sign-in pages

--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
       <h3>Contact Us</h3>
 
       <span>
-        <i class="fa-solid fa-location-dot"></i>
+        <img src="assets/img/icons/instagram.svg" alt="social-media">
         Buffalo
       </span>
       <span>
-        <i class="fa-solid fa-phone"></i>
+        <img src="assets/img/icons/facebook.svg" alt="social-media">
         Buffalo
       </span>
       <span>
-        <i class="fa-solid fa-envelope"></i>
+        <img src="assets/img/icons/whatsapp.svg" alt="social-media">
         +2348066655577
       </span>
 
@@ -235,6 +235,7 @@
     </div>
   </footer>
 
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
