--- a/pages/signup.html
+++ b/pages/signup.html
@@ -94,14 +94,17 @@
             <img class="divider" src="../assets/img/signup-divider.png" alt="divider">
 
             <a href="#" class="btn-signup-option">
+                <img src="../assets/img/icons/Google.png" alt="google">
                 Continue with Google
             </a>
 
             <a href="#" class="btn-signup-option">
+                <img src="../assets/img/icons/github.png" alt="github">
                 Continue with Github
             </a>
 
             <a href="#" class="btn-signup-option">
+                <img src="../assets/img/icons/Microsoft.png" alt="microsoft">
                 Continue with Microsoft
             </a>
         </div>
