--- a/pages/signin.html
+++ b/pages/signin.html
@@ -59,7 +59,7 @@
 
     <main class="parent-container">
         <div class="top-section">
-            <h1>Welcome</h1>
+            <h1>Welcome!</h1>
             <p>Sign In to Buffalo to continue</p>
         </div>
 
@@ -73,6 +73,7 @@
                 <div class="form-control">
                     <label>Password</label>
                     <input id="password" type="password" name="password" placeholder=".............">
+                    <small><a href="#">Forgot Password?</a></small>
                 </div>
 
                 <button id="btn__submit" class="btn_signin" type="button">Continue</button>
@@ -84,14 +85,17 @@
             <img class="divider" src="../assets/img/signup-divider.png" alt="divider">
 
             <a href="#" class="btn-signup-option">
+                <img src="../assets/img/icons/Google.png" alt="google">
                 Continue with Google
             </a>
 
             <a href="#" class="btn-signup-option">
+                <img src="../assets/img/icons/github.png" alt="github">
                 Continue with Github
             </a>
 
             <a href="#" class="btn-signup-option">
+                <img src="../assets/img/icons/Microsoft.png" alt="microsoft">
                 Continue with Microsoft
             </a>
         </div>
