made some changes to footer

--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/documentation.css">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/default.css">
+    <link rel="stylesheet" href="../css/documentation.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/default.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <nav>
             <div id="logo-container">
                 <div class="logo-div">
-                    <img src="assets/logo.png" alt="logo">
+                    <img src="../assets/img/logo.png" alt="logo">
                     <span><strong>Buffalo</strong> Splitter</span>
                 </div>
             </div>
@@ -38,11 +38,11 @@
                 </ul>
 
                 <div class="header-btn">
-                    <a href="pages/signin.html" class="btn-login">
+                    <a href="signin.html" class="btn-login">
                         Log In
                     </a>
 
-                    <a href="pages/signup.html" class="btn-signup">
+                    <a href="signup.html" class="btn-signup">
                         Sign Up
                     </a>
                 </div>
@@ -212,6 +212,6 @@
             <p>&copy; 2022 Buffalo Converter</p>
         </div>
     </footer>
-    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="../js/main.js"></script>
 </body>
 </html>
