--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Documentation</a></li>
+                    <li><a href="./pages/documentation.html">Documentation</a></li>
                     <li><a href="#">Core API</a></li>
                     <li><a href="#">Reference Zapier</a></li>
                     <li><a href="#">Webhooks</a></li>
