color change to match figma design

--- a/pages/downloadpage.html
+++ b/pages/downloadpage.html
@@ -70,7 +70,7 @@
             </div>
             </div>
             <div id="boxed-container1">
-                <h4>click button below to download</h4> 
+                <h4 class="click">click button below to download</h4> 
                 
                 <button> 
                     <i class="fa-solid fa-cloud-arrow-down download-icon"></i>
