feat: added an styles other crucial pages

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -82,7 +82,9 @@
                 <div class="form-control">
                     <label>Password</label>
                     <input id="password" type="password" name="password" placeholder=".............">
-                    <small>Forgot Password?</small>
+                    <small>
+                        <a href="#">Forgot Password?</a>
+                    </small>
                 </div>
 
                 <button id="btn__submit" class="btn_signup" type="button">Continue</button>
@@ -133,7 +135,7 @@
 
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Documentation</a></li>
+                    <li><a href="documentation.html">Documentation</a></li>
                     <li><a href="#">Core API</a></li>
                     <li><a href="#">Reference Zapier</a></li>
                     <li><a href="#">Webhooks</a></li>
@@ -161,15 +163,15 @@
             <h3>Contact Us</h3>
 
             <span>
-                <i class="fa-solid fa-location-dot"></i>
+                <img src="../assets/img/icons/instagram.svg" alt="social-media">
                 Buffalo
             </span>
             <span>
-                <i class="fa-solid fa-phone"></i>
+                <img src="../assets/img/icons/facebook.svg" alt="social-media">
                 Buffalo
             </span>
             <span>
-                <i class="fa-solid fa-envelope"></i>
+                <img src="../assets/img/icons/whatsapp.svg" alt="social-media">
                 +2348066655577
             </span>
 
