--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Buffalo Splitter</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -56,114 +56,148 @@
     </button>
   </header>
 
-  <div class="container">
-
-    <section class="rectangle">
-      <!-- <img class="" src="images/Rectangle 123.jpg" alt=""> -->
-      <!-- <div class="rectangle"></div> -->
-      <h1>The easiest way to split your CSV & JSON</h1>
+  <main class="parent-container">
+    <section class="banner">
+      <img src="assets/img/hero-banner.png" alt="hero-banner">
+      <h1>
+        The easiest way to split your CSV $ JSON
+      </h1>
     </section>
 
+    <section class="how-it-works">
+      <h2>How it works</h2>
 
-    <div class="content">
-      <section class="first">
-        <h2>How it works</h2>
+      <div class="cards-container">
+        <div class="card">
+          <a href="#" class="step">
+            Choose file
 
-        <div class="how-box">
-          <div class="how">
-            <h3 class="box-head">Choose file <img src="/images/Frame 73.jpg" alt="" /></h3>
-            <p>
-              Register and have access to drag and drop a CSV or JSON file
-              into the file selection area above, or click to choose a file
-              from your local computer.
-            </p>
-          </div>
+            <img src="assets/img/send-square.png" alt="icon">
+          </a>
 
-          <img class="arrow" src="/images/Arrow 1.jpg" alt="" />
-
-          <div class="how">
-            <h3 class="box-head">Split to <img src="/images/Frame 73.jpg" alt="" /></h3>
-            <p>choose a preferable different file format</p>
-          </div>
-          <img class="arrow" src="/images/Arrow 1.jpg" alt="" />
-
-          <div class="how">
-            <h3 class="box-head">Split now</h3>
-            <p>Download or save your file</p>
-          </div>
-        </div>
-      </section>
-
-      <section class="second">
-        <div class="csv-json">
-          <div class="csv">
-            <img src="/images/csv-file-format 1.png" alt="" />
-          </div>
-          <p class="para2">
-            CSV, sometimes known as a comma separated values file is commonly
-            used by spreadsheet applications. It allows plain text data to be
-            saved in tabular format.If a user has a large volume of data and
-            needs to transfer it between applications then a CSV file is often
-            used.
+          <p class="step-details">
+            Register and have access to drag and
+            drop a CSV or JSON file
+            into the file selection area above, or
+            click to choose a file from
+            your local computer.
           </p>
         </div>
-        <div class="csv-json">
-          <div class="json">
-            <img src="/images/json.jpg" alt="" />
-          </div>
-          <p class="para2">
-            JSON is an open standard file format and data interchange format
-            that uses human-readable text to store and transmit data objects
-            consisting of attribute-value pairs and arrays. It is a common
-            data format with diverse uses in electronic data interchange,
-            including that of web applications with servers.
-          </p>
-        </div>
-      </section>
 
-      <section class="third">
-        <div class="features">
-          <img class="feat-img" src="/images/privacy 1.jpg" alt="" />
-          <h3>PRIVACY</h3>
-          <p>
-            We recognise that you have entrusted Buffalo with your files and
-            your personal information, and handling your data is a serious
-            responsibility; we want you to know how we go about doing that.
-          </p>
-        </div>
-        <div class="features">
-          <img class="feat-img" src="/images/quick 1.jpg" alt="" />
-          <h3>QUICK</h3>
-          <p>
-            The addition of real-time conversions to the site means that you
-            get your files splited that much more quickly.
-          </p>
-        </div>
-        <div class="features">
-          <img class="feat-img" src="/images/help-is-on-hand 1.jpg" alt="" />
-          <h3>HELP IS ON HAND</h3>
-          <p>
-            We have a dedicated page in case you ever need any help, and if
-            the answer isn't on that page, then drop our support team an email
-            and they'll be happy to help.
-          </p>
-        </div>
-        <div class="features">
-          <img class="feat-img" src="/images/ease-of-use 1.jpg" alt="" />
-          <h3>EASE OF USE</h3>
-          <p>
-            You can split a file for free in just a few clicks, without any
-            need to register for an account.
-          </p>
-        </div>
-      </section>
+        <div class="card">
+          <a href="#" class="step">
+            Split to
 
-      <section class="last">
-        <h1>You're in good company:</h1>
-        <h1> Buffalo will Split your CSV & JSON with ease</h1>
-      </section>
-    </div>
-  </div>
+            <img src="assets/img/send-square.png" alt="icon">
+          </a>
+
+          <p class="step-details">
+            Choose a preferable
+            different file format
+          </p>
+        </div>
+
+        <div class="card">
+          <a href="#" class="step">
+            Split now
+
+            <img src="assets/img/send-square.png" alt="icon">
+          </a>
+
+          <p class="step-details">
+            Download or save
+            your file
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="csv-json-info">
+      <div class="csv-json">
+        <img src="./assets/img/csv-file-format 1.png" alt="csv">
+
+        <p class="about-csv-json">
+          CSV, sometimes known as a comma separated values file is commonly used by spreadsheet applications. It allows
+          plain text data to be saved in tabular format.If a user has a large volume of data and needs to transfer it
+          between applications
+          then a CSV file is often used.
+        </p>
+      </div>
+
+      <div class="csv-json">
+        <img src="./assets/img/json.jpg" alt="json">
+
+        <p class="about-csv-json">
+          JSON is an open standard file format and data interchange format that uses human-readable text to store and
+          transmit
+          data objects consisting of attribute-value pairs and arrays. It is a common data format with diverse uses in
+          electronic data interchange, including that of web applications with servers.
+        </p>
+      </div>
+    </section>
+
+    <section class="features-section">
+      <div class="feature">
+        <img src="./assets/img/privacy 1.jpg" alt="">
+
+        <h3>Privacy</h3>
+
+        <p>
+          We recognise that you have entrusted Buffalo with your files and your personal information, and handling your
+          data is a serious responsibility; we want you to know how we go about doing that.
+        </p>
+      </div>
+
+      <div class="feature">
+        <img src="./assets/img/quick 1.jpg" alt="">
+
+        <h3>Quick</h3>
+
+        <p>
+          The addition of real-time
+          conversions to the site
+          means that you get your
+          files splited that much
+          more quickly.
+        </p>
+      </div>
+
+      <div class="feature">
+        <img src="./assets/img/help-is-on-hand 1.jpg" alt="">
+
+        <h3>Help is on Hand</h3>
+
+        <p>
+          We have a dedicated page
+          in case you ever need any help,
+          and if the answer isn't on
+          that page, then drop
+          our support team an email
+          and they'll be happy to help.
+        </p>
+      </div>
+
+      <div class="feature">
+        <img src="./assets/img/ease-of-use 1.jpg" alt="">
+
+        <h3>Ease of Use</h3>
+
+        <p>
+          You can split a file for free in
+          just a few clicks, without any need
+          to register for an account.
+        </p>
+      </div>
+    </section>
+
+    <section class="final-section">
+      <p>
+        You are in good company:
+        <br>
+        Buffalo will Split your CSV & JSON with ease
+      </p>
+    </section>
+  </main>
 
   <!-- This is the "Footer" of the site, it is the same across all 4 pages -->
   <footer>
