--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -97,6 +97,14 @@
                     </label>
                     <input id="header-rows-per-split" type="number" name="header-rows-per-split">
                 </div>
+
+                <div class="split-btn-container">
+                    <button id="btn__submit" class="btn_signup" type="button">
+                        <a href="download.html">
+                            Split Now
+                        </a>
+                    </button>
+                </div>
             </div>
         </section>
 
@@ -146,7 +154,7 @@
 
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Documentation</a></li>
+                    <li><a href="documentation.html">Documentation</a></li>
                     <li><a href="#">Core API</a></li>
                     <li><a href="#">Reference Zapier</a></li>
                     <li><a href="#">Webhooks</a></li>
@@ -174,15 +182,15 @@
             <h3>Contact Us</h3>
 
             <span>
-                <i class="fa-solid fa-location-dot"></i>
+                <img src="../assets/img/icons/instagram.svg" alt="social-media">
                 Buffalo
             </span>
             <span>
-                <i class="fa-solid fa-phone"></i>
+                <img src="../assets/img/icons/facebook.svg" alt="social-media">
                 Buffalo
             </span>
             <span>
-                <i class="fa-solid fa-envelope"></i>
+                <img src="../assets/img/icons/whatsapp.svg" alt="social-media">
                 +2348066655577
             </span>
 
