--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="doc-col-4">
+                <div class="doc-col-4 background-zero">
 
                 </div>
                 <div class="doc-col-4">
@@ -138,7 +138,7 @@
                         <p>LEARN MORE<span>&#8594</span></p>
                     </div>
                 </div>
-                <div class="doc-col-4">
+                <div class="doc-col-4 background-zero">
 
                 </div>
             </div>
