chore: updated the logo routes and the help route in the nav

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
   <header>
     <nav>
       <div id="logo-container">
-        <div class="logo-div">
-          <img src="assets/img/logo.png" alt="logo">
-          <span><strong>Buffalo</strong> Splitter</span>
-        </div>
+        <a href="/">
+          <div class="logo-div">
+            <img src="assets/img/logo.png" alt="logo">
+            <span><strong>Buffalo</strong> Splitter</span>
+          </div>
+        </a>
       </div>
 
       <div class="mobile-nav">
@@ -35,7 +37,7 @@
             <a href="#">About</a>
           </li>
           <li>
-            <a href="#">Help</a>
+            <a href="pages/documentation.html">Help</a>
           </li>
         </ul>
 
