--- a/pages/signin.html
+++ b/pages/signin.html
@@ -18,10 +18,12 @@
     <header>
         <nav>
             <div id="logo-container">
-                <div class="logo-div">
-                    <img src="../assets/img/logo.png" alt="logo">
-                    <span><strong>Buffalo</strong> Splitter</span>
-                </div>
+                <a href="/">
+                    <div class="logo-div">
+                        <img src="../assets/img/logo.png" alt="logo">
+                        <span><strong>Buffalo</strong> Splitter</span>
+                    </div>
+                </a>
             </div>
 
             <div class="mobile-nav">
@@ -36,7 +38,7 @@
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Help</a>
+                        <a href="documentation.html">Help</a>
                     </li>
                 </ul>
 
